[gd_scene load_steps=31 format=3 uid="uid://4fc1nvn8uu46"]

[ext_resource type="Script" path="res://signup.gd" id="1_ehfkp"]
[ext_resource type="Texture2D" uid="uid://xdsgc8bu05td" path="res://sprites/Untitled78_20240329161643.png" id="1_lyhqg"]
[ext_resource type="Texture2D" uid="uid://blus3jct6drmr" path="res://sprites/Untitled78_20240409205301_edit_542478463116914.png" id="2_suoel"]
[ext_resource type="Texture2D" uid="uid://gwkv8dgira30" path="res://sprites/Untitled80_20240416124711.png" id="5_5ev58"]
[ext_resource type="FontFile" uid="uid://cxo00kjcsmt7t" path="res://addons/fonts/BalooBhaijaan-Regular.ttf" id="5_un483"]
[ext_resource type="Texture2D" uid="uid://dm46g3rno6bkd" path="res://sprites/exit.png" id="5_ximhw"]
[ext_resource type="Texture2D" uid="uid://cjo2l4jc4ile1" path="res://sprites/user.png" id="6_jwxjd"]
[ext_resource type="FontFile" uid="uid://ba8tt4gxqogjq" path="res://addons/fonts/FrancoisOne.ttf" id="7_33q5l"]
[ext_resource type="PackedScene" path="res://terms_services.tscn" id="10_cahgs"]
[ext_resource type="FontFile" uid="uid://bnw5ghde11g7m" path="res://addons/fonts/Monoton-Regular.ttf" id="11_ehahw"]
[ext_resource type="PackedScene" path="res://exit_popup.tscn" id="11_rvlbj"]
[ext_resource type="Texture2D" uid="uid://b70i01bly4f06" path="res://sprites/panel.png" id="12_5efag"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpij3"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukic1"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvsk7"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5h1r"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nse2d"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_717o6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_coowr"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfftc"]
bg_color = Color(0.556863, 0.556863, 0.556863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5q2sd"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvk5i"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efbwi"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shc6u"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0q7vo"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uxq1w"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pl8n4"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0v5qc"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0c8yk"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfusi"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 0.937255)

[node name="signup_control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehfkp")

[node name="mcSignup" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SignupScreen" type="TextureRect" parent="mcSignup"]
layout_mode = 2
texture = ExtResource("1_lyhqg")
expand_mode = 1

[node name="signup" type="TextureRect" parent="mcSignup/SignupScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0741748
anchor_top = 0.0457364
anchor_right = 0.560388
anchor_bottom = 0.97907
offset_left = 133.0
offset_top = 92.0
offset_right = -84.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_suoel")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="vb_confirmPassword" type="VBoxContainer" parent="mcSignup/SignupScreen/signup"]
layout_mode = 2
anchor_left = 0.13467
anchor_top = 0.195298
anchor_right = 0.454633
anchor_bottom = 0.339964
offset_left = 88.0
offset_top = 250.0
offset_right = 326.0
offset_bottom = 328.0
metadata/_edit_use_anchors_ = true

[node name="ConfirmPassword" type="Label" parent="mcSignup/SignupScreen/signup/vb_confirmPassword"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_un483")
theme_override_font_sizes/font_size = 40
text = "Confirm Password"

[node name="indicator" type="Label" parent="mcSignup/SignupScreen/signup/vb_confirmPassword/ConfirmPassword"]
offset_left = 330.0
offset_top = -2.0
offset_right = 365.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "*"

[node name="vb_signupButton" type="VBoxContainer" parent="mcSignup/SignupScreen/signup/vb_confirmPassword/ConfirmPassword"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
anchor_left = -0.215126
anchor_top = -1.73462
anchor_right = 0.409656
anchor_bottom = -1.12807
offset_left = 125.267
offset_top = 408.812
offset_right = 359.267
offset_bottom = 553.812
theme_override_constants/separation = 15
metadata/_edit_use_anchors_ = true

[node name="cbTerms" type="CheckBox" parent="mcSignup/SignupScreen/signup/vb_confirmPassword/ConfirmPassword/vb_signupButton"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_un483")
theme_override_font_sizes/font_size = 35
text = "I agree to the "

[node name="termsServices" type="Button" parent="mcSignup/SignupScreen/signup/vb_confirmPassword/ConfirmPassword/vb_signupButton/cbTerms"]
layout_mode = 0
offset_left = 218.354
offset_top = 2.00037
offset_right = 582.354
offset_bottom = 63.0004
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.290196, 0.376471, 0.972549, 1)
theme_override_colors/font_focus_color = Color(0.290196, 0.376471, 0.972549, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 1, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 1, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 1, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 1, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("5_un483")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_dpij3")
theme_override_styles/hover = SubResource("StyleBoxFlat_ukic1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hvsk7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_n5h1r")
theme_override_styles/focus = SubResource("StyleBoxFlat_nse2d")
text = "Terms and Services"

[node name="signUp" type="Button" parent="mcSignup/SignupScreen/signup/vb_confirmPassword/ConfirmPassword/vb_signupButton"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_un483")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_717o6")
theme_override_styles/hover = SubResource("StyleBoxFlat_coowr")
text = "Create"

[node name="confirmPassword" type="TextEdit" parent="mcSignup/SignupScreen/signup/vb_confirmPassword/ConfirmPassword"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
offset_top = 65.0
offset_right = 587.0
offset_bottom = 119.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jfftc")

[node name="confirmPasswordEnter" type="LineEdit" parent="mcSignup/SignupScreen/signup/vb_confirmPassword/ConfirmPassword/confirmPassword"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.599659
anchor_bottom = 0.592593
offset_left = 4.0
offset_right = 233.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5q2sd")
theme_override_styles/focus = SubResource("StyleBoxFlat_pvk5i")
placeholder_text = "Confirm Password"
max_length = 20
caret_blink = true
secret = true
secret_character = "✦"
metadata/_edit_use_anchors_ = true

[node name="vb_password" type="VBoxContainer" parent="mcSignup/SignupScreen/signup"]
layout_mode = 2
anchor_left = 0.12894
anchor_top = 0.149186
anchor_right = 0.47469
anchor_bottom = 0.207052
offset_left = 90.0
offset_top = 179.0
offset_right = 327.0
offset_bottom = 243.0
metadata/_edit_use_anchors_ = true

[node name="Password" type="Label" parent="mcSignup/SignupScreen/signup/vb_password"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_un483")
theme_override_font_sizes/font_size = 40
text = "Password"

[node name="password" type="TextEdit" parent="mcSignup/SignupScreen/signup/vb_password/Password"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
offset_top = 65.0
offset_right = 588.0
offset_bottom = 123.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jfftc")

[node name="passwordEnter" type="LineEdit" parent="mcSignup/SignupScreen/signup/vb_password/Password/password"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00510204
anchor_top = 0.0517241
anchor_right = 0.598639
anchor_bottom = 0.603448
offset_left = 4.0
offset_right = 232.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5q2sd")
theme_override_styles/focus = SubResource("StyleBoxFlat_efbwi")
placeholder_text = "Enter Password"
max_length = 20
caret_blink = true
secret = true
secret_character = "✦"
metadata/_edit_use_anchors_ = true

[node name="indicator" type="Label" parent="mcSignup/SignupScreen/signup/vb_password/Password"]
offset_left = 178.0
offset_top = -2.0
offset_right = 204.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "*"

[node name="vb_account" type="VBoxContainer" parent="mcSignup/SignupScreen/signup"]
layout_mode = 2
anchor_left = 0.126075
anchor_top = 0.100362
anchor_right = 0.477555
anchor_bottom = 0.167269
offset_left = 90.0
offset_top = 117.0
offset_right = 328.0
offset_bottom = 170.0
metadata/_edit_use_anchors_ = true

[node name="Account" type="Label" parent="mcSignup/SignupScreen/signup/vb_account"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_un483")
theme_override_font_sizes/font_size = 40
text = "E-mail"

[node name="indicator" type="Label" parent="mcSignup/SignupScreen/signup/vb_account/Account"]
layout_mode = 2
anchor_right = 0.159
offset_left = 114.0
offset_top = -5.0
offset_right = 66.441
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "*"

[node name="signup" type="TextureRect" parent="mcSignup/SignupScreen/signup/vb_account/Account"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 330.0
offset_top = 150.0
offset_right = -1424.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_suoel")
expand_mode = 1

[node name="Email" type="TextEdit" parent="mcSignup/SignupScreen/signup/vb_account/Account/signup"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
offset_left = 250.0
offset_top = -23.0
offset_right = 834.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jfftc")

[node name="emailEnter" type="LineEdit" parent="mcSignup/SignupScreen/signup/vb_account/Account/signup/Email"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0175439
anchor_right = 0.602329
anchor_bottom = 0.578947
offset_left = 4.0
offset_right = 233.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5q2sd")
theme_override_styles/focus = SubResource("StyleBoxFlat_shc6u")
placeholder_text = "Enter E-mail Account"
max_length = 50
caret_blink = true
metadata/_edit_use_anchors_ = true

[node name="Options" type="TextureRect" parent="mcSignup/SignupScreen/signup"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.63313
anchor_top = 0.734293
anchor_right = 1.94712
anchor_bottom = 0.846409
offset_left = -27.8828
offset_top = -15.1278
offset_right = 122.117
offset_bottom = 134.872
texture = ExtResource("5_5ev58")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Login" type="Button" parent="mcSignup/SignupScreen/signup/Options"]
layout_mode = 0
offset_left = 194.0
offset_top = 87.0
offset_right = 332.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_33q5l")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_0q7vo")
theme_override_styles/hover = SubResource("StyleBoxTexture_uxq1w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pl8n4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0v5qc")
theme_override_styles/focus = SubResource("StyleBoxFlat_0c8yk")
text = "Log In"
icon = ExtResource("6_jwxjd")
icon_alignment = 2
expand_icon = true

[node name="Exit" type="Button" parent="mcSignup/SignupScreen/signup/Options"]
layout_mode = 0
offset_left = 234.0
offset_top = 135.0
offset_right = 336.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_33q5l")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_0q7vo")
theme_override_styles/hover = SubResource("StyleBoxTexture_uxq1w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pl8n4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0v5qc")
theme_override_styles/focus = SubResource("StyleBoxFlat_0c8yk")
text = "Exit "
icon = ExtResource("5_ximhw")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0307582
anchor_right = 0.394492
anchor_bottom = 0.051938
offset_left = 108.0
offset_top = 30.0
offset_right = 578.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_ehahw")
theme_override_font_sizes/font_size = 90
text = "VivaVocabulario"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="errorMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12233
anchor_top = 0.290698
anchor_right = 0.260583
anchor_bottom = 0.362016
offset_left = 229.0
offset_top = 412.0
offset_right = 455.0
offset_bottom = 458.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_33q5l")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3
justification_flags = 161
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 2787.0
offset_bottom = 1285.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wfusi")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 180
text = "Signup Complete"

[node name="Close" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 24)
offset_left = 1033.0
offset_top = 748.0
offset_right = 1730.0
offset_bottom = 873.0
theme_override_fonts/font = ExtResource("5_un483")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_717o6")
theme_override_styles/hover = SubResource("StyleBoxFlat_coowr")
text = "Close
"

[node name="Node2D" parent="." instance=ExtResource("10_cahgs")]
visible = false

[node name="exit_control" parent="." instance=ExtResource("11_rvlbj")]
visible = false
layout_mode = 1

[node name="Panel" type="Sprite2D" parent="."]
position = Vector2(858, 264)
scale = Vector2(0.432184, 0.106645)
texture = ExtResource("12_5efag")

[node name="login" type="Label" parent="."]
layout_mode = 0
offset_left = 673.0
offset_top = 232.0
offset_right = 1042.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_33q5l")
theme_override_font_sizes/font_size = 40
text = "Create Account"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="mcSignup/SignupScreen/signup/vb_confirmPassword/ConfirmPassword/vb_signupButton/signUp" to="." method="_on_sign_up_button_up"]
[connection signal="button_down" from="CanvasLayer/Close" to="." method="_on_close_button_down"]
